# Metrology

./: .gitignore  README.md  test  test.cpp  test1.cpp
JilbMetrics/: CMakeLists.txt
JilbMetrics/src/code/: metrics-calculator.cpp  widget.cpp
JilbMetrics/src/include/: MetricsCalculatorASTConsumer.hpp  MetricsCalculatorAction.hpp  MyRecursiveASTVisitor.hpp  metrics-calculator.h  widget.h
JilbMetrics/src/ui/: widget.ui
Parser/: CMakeLists.txt
Parser/src/code/: main.cpp  metrics-calculator.cpp  widget.cpp
Parser/src/include/: MyRecursiveASTVisitor.hpp  metrics-calculator.h  widget.h
Parser/src/ui/: widget.ui
